Fix incorrect height on mobile

--- a/client/src/components/common/Column/Column.module.css
+++ b/client/src/components/common/Column/Column.module.css
@@ -27,7 +27,7 @@
 
 .tasksList {
   list-style-type: none;
-  padding: 0;
+  padding: 10px 0;
   margin: 0;
   margin-top: 20px;
 }
