--- a/client/src/components/layout/SideBar/SideBar.module.css
+++ b/client/src/components/layout/SideBar/SideBar.module.css
@@ -83,12 +83,13 @@
 
 @media only screen and (max-width: 800px){
   .sideBarWrapper {
+    height: 100%;
     top: 0;
   }
 
   .sideBar {
     padding-top: 0;
-    height: 100vh;
+    height: 100%;
   }
 
   .titleContainer {
