--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,3 +1,7 @@
+html, body{
+  height: 100%;
+}
+
 :root {
   font-weight: 400;
   font-synthesis: none;
@@ -5,6 +9,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   scroll-behavior: smooth;
+  height: 100%;
 }
 
 body {
